demand-shaping-k8s/e-shop example app/identity-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api-ingress
    
spec:  
  ingressClassName: traefik
  rules:
  - host: identity-api.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  identity-api
              port:
                number: 8080
